<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="cheat_button">Cheat!</string>

    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>

    <string name="question_australia">Australia is located in the southern hemisphere.</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The Amazon River is the longest river in Africa.</string>
    <string name="question_americas">The United States and Canada share the longest international border in the world.</string>

    <string name="judgment_toast">Cheating is wrong</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_prompt">Do you want to see the answer?</string>
    <string name="warning_text">Are you sure you want to do this?</string>
</resources>
